# synth-controller

./: CMakeLists.txt  README.md  controller.c  cv-note.c  main.c  tusb_config.h  usb.c
include/: controller.h  cv-note.h
mcp4822/: CMakeLists.txt  mcp4822.c
mcp4822/include/: mcp4822.h
ssd1306/: CMakeLists.txt
